; ModuleID = '/home/carl/AnghaBench/goaccess/src/extr_color.c_set_normal_color.c'
source_filename = "/home/carl/AnghaBench/goaccess/src/extr_color.c_set_normal_color.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32, i32, i32, i32, %struct.TYPE_6__* }

@COLOR_WHITE = common dso_local global i32 0, align 4
@COLOR_NORMAL = common dso_local global i32 0, align 4
@pair_list = common dso_local global i8* null, align 8
@color_list = common dso_local global i8* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @set_normal_color() #0 {
  %1 = alloca %struct.TYPE_6__*, align 8
  %2 = alloca %struct.TYPE_6__*, align 8
  %3 = call %struct.TYPE_6__* (...) @new_gcolorpair()
  store %struct.TYPE_6__* %3, %struct.TYPE_6__** %1, align 8
  %4 = call %struct.TYPE_6__* (...) @new_gcolors()
  store %struct.TYPE_6__* %4, %struct.TYPE_6__** %2, align 8
  %5 = load %struct.TYPE_6__*, %struct.TYPE_6__** %1, align 8
  %6 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %5, i32 0, i32 0
  store i32 1, i32* %6, align 8
  %7 = load i32, i32* @COLOR_WHITE, align 4
  %8 = load %struct.TYPE_6__*, %struct.TYPE_6__** %1, align 8
  %9 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %8, i32 0, i32 2
  store i32 %7, i32* %9, align 8
  %10 = load %struct.TYPE_6__*, %struct.TYPE_6__** %1, align 8
  %11 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %10, i32 0, i32 1
  store i32 -1, i32* %11, align 4
  %12 = load %struct.TYPE_6__*, %struct.TYPE_6__** %1, align 8
  %13 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %14 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %13, i32 0, i32 4
  store %struct.TYPE_6__* %12, %struct.TYPE_6__** %14, align 8
  %15 = load i32, i32* @COLOR_NORMAL, align 4
  %16 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %17 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %16, i32 0, i32 3
  store i32 %15, i32* %17, align 4
  %18 = load %struct.TYPE_6__*, %struct.TYPE_6__** %1, align 8
  %19 = call i8* @list_create(%struct.TYPE_6__* %18)
  store i8* %19, i8** @pair_list, align 8
  %20 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %21 = call i8* @list_create(%struct.TYPE_6__* %20)
  store i8* %21, i8** @color_list, align 8
  %22 = load %struct.TYPE_6__*, %struct.TYPE_6__** %1, align 8
  %23 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 8
  %25 = load %struct.TYPE_6__*, %struct.TYPE_6__** %1, align 8
  %26 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %25, i32 0, i32 2
  %27 = load i32, i32* %26, align 8
  %28 = load %struct.TYPE_6__*, %struct.TYPE_6__** %1, align 8
  %29 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %28, i32 0, i32 1
  %30 = load i32, i32* %29, align 4
  %31 = call i32 @init_pair(i32 %24, i32 %27, i32 %30)
  ret void
}

declare dso_local %struct.TYPE_6__* @new_gcolorpair(...) #1

declare dso_local %struct.TYPE_6__* @new_gcolors(...) #1

declare dso_local i8* @list_create(%struct.TYPE_6__*) #1

declare dso_local i32 @init_pair(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
